# ChangeLog for app-editors/emacs-cvs
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  alsa should not depend on sound USE flag in RDEPEND

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  request AUTOCONF 2.61 instead of latest. Fixes bug 170969, reported by
  <lkml_ccc@yahoo.it>

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  finally fix eselect call

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  added xft to IUSE

  16 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  removed order or DEPEND and RDEPEND, so values are correctly inserted

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-23.0.0-r2.ebuild:
  correct value of SLOT

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org> ChangeLog:
  metadata.xml added; keywords reverted to ~x86 only

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/digest-emacs-cvs-22.0.95-r2, +files/digest-emacs-cvs-22.0.9999-r6,
  +files/digest-emacs-cvs-23.0.0-r2, +Manifest:
  adding Manifest and digests, so users can really use it

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  emacs-cvs-22.0.95-r2.ebuild, emacs-cvs-22.0.9999-r6.ebuild,
  emacs-cvs-23.0.0-r2.ebuild:
  correct Header

  15 Mar 2007; Christian Faulhammer <opfer@gentoo.org>
  +files/emacs-cvs-21.3.50-nofink.diff, +emacs-cvs-22.0.95-r2.ebuild,
  +emacs-cvs-22.0.9999-r6.ebuild, +emacs-cvs-23.0.0-r2.ebuild,
  +files/emacs-cvs-disable_alsa_detection.patch,
  +files/emacs-cvs-freebsd-sparc.patch: