@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.95.tar.gz 37754533 RMD160 e5aa6001a255538dbc8fb2d548d1b67979f94033 SHA1 90cd5a6078d26b3bd0eb4f2da0561df759bc880f SHA256 5e25e8f221fe18f07feadd831bb482e6cde53c9470713c63f059ff2d3e715b1d
-EBUILD emacs-cvs-22.0.95-r2.ebuild 7280 RMD160 a25df1ce221e755d5a8cb853e21274b38abf122d SHA1 322565567ffbc0ebfd0068d3a1023e92341637a3 SHA256 e2501934dda4056a040a3e1e29aaaaf5f8e0ef9f7f8f2cafedf7a0c1113c5163
-MD5 ff16347b5355965adc6faa3456bf953d emacs-cvs-22.0.95-r2.ebuild 7280
-RMD160 a25df1ce221e755d5a8cb853e21274b38abf122d emacs-cvs-22.0.95-r2.ebuild 7280
-SHA256 e2501934dda4056a040a3e1e29aaaaf5f8e0ef9f7f8f2cafedf7a0c1113c5163 emacs-cvs-22.0.95-r2.ebuild 7280
-EBUILD emacs-cvs-22.0.9999-r6.ebuild 7294 RMD160 7a7f61505b7dd5a2279b542c2735965e8ef399e1 SHA1 c34c4d63d71658976452ac697044caa230f38dab SHA256 4be2f340af9256081fc90ee7e33f557f086fea87e27ae4043a0eabf49d2c49e7
-MD5 37ebc0b484613a0071732ecc72d8eaf8 emacs-cvs-22.0.9999-r6.ebuild 7294
-RMD160 7a7f61505b7dd5a2279b542c2735965e8ef399e1 emacs-cvs-22.0.9999-r6.ebuild 7294
-SHA256 4be2f340af9256081fc90ee7e33f557f086fea87e27ae4043a0eabf49d2c49e7 emacs-cvs-22.0.9999-r6.ebuild 7294
-EBUILD emacs-cvs-23.0.0-r2.ebuild 7509 RMD160 3f29de2239f30b94af0b7ffd522af3bbf3656ce7 SHA1 61aadadbcb849ed70d1924be3dba7a24d11c9dec SHA256 eb421347d2d21f7faf67e0849ab6addbb31728ce807681638f002ce5457f58d0
-MD5 e10f2d80cef5a454ff0285e4de703469 emacs-cvs-23.0.0-r2.ebuild 7509
-RMD160 3f29de2239f30b94af0b7ffd522af3bbf3656ce7 emacs-cvs-23.0.0-r2.ebuild 7509
-SHA256 eb421347d2d21f7faf67e0849ab6addbb31728ce807681638f002ce5457f58d0 emacs-cvs-23.0.0-r2.ebuild 7509
-MISC ChangeLog 2347 RMD160 27cf6fce7929c5b69c092410fb092fb16395f1fe SHA1 1bcf3c699efd35bf7c00d9756536cf1e6783280e SHA256 0f73de51246a922cdd0ace1cf3f3d3f1ddfc4c6f5f71615d74914a4de4b3e6e7
-MD5 2fd5e05f394a8e84a2a583c92c88c530 ChangeLog 2347
-RMD160 27cf6fce7929c5b69c092410fb092fb16395f1fe ChangeLog 2347
-SHA256 0f73de51246a922cdd0ace1cf3f3d3f1ddfc4c6f5f71615d74914a4de4b3e6e7 ChangeLog 2347
+EBUILD emacs-cvs-22.0.95-r2.ebuild 7241 RMD160 07d0bbcb5db5c0bce3352fc8b1de8f94b2d4a014 SHA1 f680e89b3984da04a242f07d8de09fad1da8dd2c SHA256 036e4801c052648de7ee1a375a3211a14cd299d63becf460ef7b5befa8fef43e
+MD5 462fc700816e57c9bc992ad3c6cf74c7 emacs-cvs-22.0.95-r2.ebuild 7241
+RMD160 07d0bbcb5db5c0bce3352fc8b1de8f94b2d4a014 emacs-cvs-22.0.95-r2.ebuild 7241
+SHA256 036e4801c052648de7ee1a375a3211a14cd299d63becf460ef7b5befa8fef43e emacs-cvs-22.0.95-r2.ebuild 7241
+EBUILD emacs-cvs-22.0.9999-r6.ebuild 7255 RMD160 34f138969d4c95b625bd42d0977783324a5d3200 SHA1 11f06f53023c2db83fdc006891459ea345663539 SHA256 3c6cba95da5715ac6ed9c3773c6709630781ac538912e0e92bf042c75c23951f
+MD5 8f40d85744e0906d9099abb2839380fc emacs-cvs-22.0.9999-r6.ebuild 7255
+RMD160 34f138969d4c95b625bd42d0977783324a5d3200 emacs-cvs-22.0.9999-r6.ebuild 7255
+SHA256 3c6cba95da5715ac6ed9c3773c6709630781ac538912e0e92bf042c75c23951f emacs-cvs-22.0.9999-r6.ebuild 7255
+EBUILD emacs-cvs-23.0.0-r2.ebuild 7470 RMD160 52a92584fa6412c6acd8b274cbc4082c0b8fca02 SHA1 469c173b19b6bd16253b65bb6986adcb0fb80098 SHA256 7934b704938a7dd6aee657b741696b954ef87ec6124dbf569d15656cdceec8ec
+MD5 41cb186f18369c15cd733c674be651b7 emacs-cvs-23.0.0-r2.ebuild 7470
+RMD160 52a92584fa6412c6acd8b274cbc4082c0b8fca02 emacs-cvs-23.0.0-r2.ebuild 7470
+SHA256 7934b704938a7dd6aee657b741696b954ef87ec6124dbf569d15656cdceec8ec emacs-cvs-23.0.0-r2.ebuild 7470
+MISC ChangeLog 2620 RMD160 83483a155592347dc6ee1958676b72aa810ed7b0 SHA1 b5290133a067d1a7e57e8dc9f4761ee7173d4e59 SHA256 7da1fb994c4206df2b788a6430b6a5bfbf3f0c75d1f2a82a14e209767957c370
+MD5 0fd722b8300080524bba70c930c93824 ChangeLog 2620
+RMD160 83483a155592347dc6ee1958676b72aa810ed7b0 ChangeLog 2620
+SHA256 7da1fb994c4206df2b788a6430b6a5bfbf3f0c75d1f2a82a14e209767957c370 ChangeLog 2620
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
